Hide theme info overflow in theme card footer (fixes #3)

--- a/src/login/resources/css/_themes.scss
+++ b/src/login/resources/css/_themes.scss
@@ -50,6 +50,14 @@
             width: 100%;
           }
         }
+
+        .panel-footer {
+          div {
+            overflow: hidden;
+            text-overflow: ellipsis;
+            white-space: nowrap;
+          }
+        }
       }
 
       .btn-add-theme {
